[package]
name = "md2html"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = "0.9"
clap = { version = "4", features = ["derive"] }
v_htmlescape = "0.15.8" 
syntect = "5"
rfd = "0.14.1"
hyper = { version = "1.4.1", features = ["client"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
dialoguer = "0.11.0"
egui = "0.28.1"
eframe = "0.28.1"


